# dataflow-framework

abstraction-level-0/: process.py
abstraction-level-1/: process.py
abstraction_level_2/: cli.py  core.py  main.py  output.txt  pipeline.py  processor_types.py
abstraction_level_3/: cli.py  core.py  main.py  pipeline.py  processor_types.py
abstraction_level_3/abstraction_level_3/: pyproject.toml
abstraction_level_3/abstraction_level_3/src/abstraction_level_3/: __init__.py  cli.py  core.py  input.txt  main.py  output.txt  pipeline.py
abstraction_level_3/abstraction_level_3/src/abstraction_level_3/processors/: upper.py
abstraction_level_3/processors/: snake.py
abstraction_level_4/: stream_processing.py
abstraction_level_5/: pyproject.toml
abstraction_level_5/src/abstraction_level_5/: README.md  __init__.py  cli.py  core.py  main.py  pipeline.py  pipeline.yaml  processor_types.py  test_logs.txt
abstraction_level_5/src/abstraction_level_5/processors/: __init__.py  archive.py  counter.py  formatter.py  printer.py  tagger.py  tally.py  trim.py
abstraction_level_6/: pyproject.toml
abstraction_level_6/src/abstraction_level_6/: example_config.yaml  main.py  main_visualize.py
abstraction_level_6/src/abstraction_level_6/routing_engine/: config_loader.py  engine.py  visualize.py
abstraction_level_6/src/abstraction_level_6/routing_engine/processors/: filters.py  formatters.py  output.py  start.py
abstraction_level_7/: README.md  pyproject.toml
abstraction_level_7/src/abstraction_level_7/: __init__.py  cli.py  engine.py  pipeline.py
abstraction_level_7/src/abstraction_level_7/dashboard/: server.py
abstraction_level_7/src/abstraction_level_7/dashboard/static/: app.js  index.html  styles.css
abstraction_level_7/src/abstraction_level_7/observability/: store.py
abstraction_level_7/src/abstraction_level_7/processors/: __init__.py  classify.py  enrich.py  parse.py  sink.py
